--- a/webapp/src/components/StatCard/StatCard.module.scss
+++ b/webapp/src/components/StatCard/StatCard.module.scss
@@ -1,9 +1,9 @@
 // App and Bootstrap variables required
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "../../scss/variables";
-@import "../../scss/bootstrap/variables";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '../../scss/variables';
+@import '../../scss/bootstrap/variables';
 
 .statCard {
   margin-bottom: 24px;
@@ -33,4 +33,28 @@
   font-weight: $font-weight-medium;
   letter-spacing: 0.15px;
   color: $secondary;
+}
+
+.statCardIconAnimation {
+  svg {
+    -webkit-animation: rotation 2s infinite linear;
+    animation: rotation 2s infinite linear;
+  }
+}
+
+.statCardIcon {
+  text-align: end;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
 }
