--- a/webapp/src/containers/MasternodesPage/components/MasterNodesList/MasternodesList.module.scss
+++ b/webapp/src/containers/MasternodesPage/components/MasterNodesList/MasternodesList.module.scss
@@ -9,11 +9,11 @@
   overflow: hidden;
 }
 
-.tableResponsive {
-  height: calc(100vh - 186px);
-  min-height: 400px;
-  overflow: auto;
-}
+// .tableResponsive {
+//   height: calc(100vh - 186px);
+//   min-height: 400px;
+//   overflow: auto;
+// }
 
 .table {
   margin-bottom: 0;
