Add horizontal on wallet page transaction table to view full data

--- a/webapp/src/containers/WalletPage/components/WalletTxns/WalletTxns.module.scss
+++ b/webapp/src/containers/WalletPage/components/WalletTxns/WalletTxns.module.scss
@@ -6,7 +6,8 @@
 @import '../../../../scss/bootstrap/variables';
 
 .card {
-  overflow: hidden;
+  overflow: auto;
+  white-space: nowrap;
 }
 
 .table {
