WIP: Splash loader is added

--- a/webapp/src/components/LaunchScreen/LaunchScreen.module.scss
+++ b/webapp/src/components/LaunchScreen/LaunchScreen.module.scss
@@ -16,6 +16,47 @@
     text-align: center;
     svg {
       margin: auto;
+      width: 72px;
+      height: 72px;
     }
+  }
+
+  .appTitle {
+    font-size: 16px;
+    letter-spacing: 0.44px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  .subAppVersion {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 12px;
+    letter-spacing: 0.21px;
+    line-height: 16px;
+    text-align: center;
+  }
+
+  .rotationconAnimation {
+    text-align: center;
+    svg {
+      width: 3rem;
+      height: 3rem;
+      margin-top: 1rem;
+      -webkit-animation: rotation 2s infinite linear;
+      animation: rotation 2s infinite linear;
+    }
+  }
+}
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
