--- a/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
+++ b/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
@@ -18,27 +18,11 @@
   }
 }
 
-.icon {
-  width: 24px;
-  height: 24px;
-  color: $secondary;
-}
-
-.time {
-  white-space: nowrap;
-}
-
-.amount {
-  text-align: right;
-  letter-spacing: 0.44px;
-}
-
-.unit {
-  color: $secondary;
-}
-
 .actionCell {
   width: 24px;
   height: 24px;
-  color: $secondary;
+}
+
+.qrCc svg {
+  color: $black;
 }
