--- a/webapp/src/scss/_variables.scss
+++ b/webapp/src/scss/_variables.scss
@@ -5,6 +5,7 @@
 // Color system
 
 $dfi-purple: #5b10ff;
+$dfi-pink: #ff00af;
 $dfi-green: #02b31b;
 $dfi-orange: #ff9629;
 $dfi-red: #ff0000;
@@ -13,6 +14,7 @@ $dfi-umbra: #08091f;
 
 $dfi-colors: (
   'dfi-purple': $dfi-purple,
+  'dfi-pink': $dfi-pink,
   'dfi-green': $dfi-green,
   'dfi-orange': $dfi-orange,
   'dfi-red': $dfi-red,
