--- a/webapp/src/scss/bootstrap/_progress.scss
+++ b/webapp/src/scss/bootstrap/_progress.scss
@@ -4,9 +4,15 @@
 
 @if $enable-transitions {
   @keyframes progress-bar-pulse {
-    0%   { background-position: 0; }
-    50%  { background-position: 48px; }
-    100% { background-position: 96px; }
+    0% {
+      background-position: 0;
+    }
+    50% {
+      background-position: 48px;
+    }
+    100% {
+      background-position: 96px;
+    }
   }
 }
 
@@ -20,7 +26,12 @@
 
 @if $enable-transitions {
   .progress-bar-animated {
-    background: linear-gradient(135deg, rgba(128,104,255,1) 0%, rgba(91,16,255,1) 33.3%, rgba(128,104,255,1) 100%);
+    background: linear-gradient(
+      135deg,
+      rgba(255, 128, 175, 1) 0%,
+      rgba(255, 0, 175, 1) 33.3%,
+      rgba(255, 128, 175, 1) 100%
+    );
     background-size: 48px;
     animation: progress-bar-pulse $progress-bar-animation-timing;
   }
