--- a/webapp/src/app/App.scss
+++ b/webapp/src/app/App.scss
@@ -14,6 +14,10 @@
 @import '../scss/bootstrap/variables';
 @import '~bootstrap/scss/mixins';
 
+// Custom mixins (be sure to follow original mixin order: https://github.com/twbs/bootstrap/blob/main/scss/_mixins.scss)
+@import '../scss/bootstrap/mixins/buttons';
+@import '../scss/bootstrap/mixins/gradients';
+
 //
 // Import Bootstrap piecemeal
 //
