--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   width: 100vw;
 
-  >main {
+  > main {
     width: calc(100% - 224px);
     border-left: $border-width solid $border-color;
     border-top-left-radius: $border-radius * 1.5;
@@ -42,10 +42,10 @@ body {
         -webkit-app-region: drag;
       }
 
-      >h1,
-      >.nav,
-      >.btn-group,
-      >.btn {
+      > h1,
+      > .nav,
+      > .btn-group,
+      > .btn {
         flex-grow: 1;
       }
 
@@ -57,7 +57,7 @@ body {
         margin-bottom: -8px;
       }
 
-      >.btn-group {
+      > .btn-group {
         display: flex;
         justify-content: flex-end;
         margin-right: -16px;
@@ -102,6 +102,7 @@ body {
       padding: 16px 32px;
       background-color: $body-bg;
       border-top: $border-width solid $border-color;
+      border-bottom-left-radius: $border-radius * 1.5;
       width: 100%;
     }
 
