Removed inline styles and added classes

--- a/webapp/src/components/TokenCard/TokenCard.module.scss
+++ b/webapp/src/components/TokenCard/TokenCard.module.scss
@@ -9,6 +9,11 @@
   margin-bottom: 24px;
 }
 
+.text {
+  text-align: end;
+  line-height: 1.5rem;
+}
+
 .cardBody {
   display: inline-block;
   flex-wrap: wrap;
