--- a/webapp/src/containers/TokensPage/components/CreateToken/DCTDistribution/AddressList/AddressList.module.scss
+++ b/webapp/src/containers/TokensPage/components/CreateToken/DCTDistribution/AddressList/AddressList.module.scss
@@ -9,6 +9,20 @@
   overflow: hidden;
 }
 
+.icon {
+  height: 20px;
+  width: 20px;
+}
+
+.borderBotton {
+  border-bottom: 1px solid #cccccc;
+}
+
+.borderNone {
+  border: none;
+  width: 100%;
+}
+
 .tableResponsive {
   height: calc(100vh - 300px);
   min-height: 400px;
