Add basic UI for swap page

--- a/webapp/src/components/SwapCard/SwapCard.module.scss
+++ b/webapp/src/components/SwapCard/SwapCard.module.scss
@@ -58,3 +58,15 @@
   color: rgba(0, 0, 0, 0.6);
   padding-right: 1rem;
 }
+
+.colorMax {
+  color: #FF00AF;
+}
+// .dropdownSwap {
+//   .dropdown {
+//    button {
+//     border: none !important;
+//     border-color: #fff !important;
+//     }
+//   }
+// }
