Add basic UI for pool tab page

--- a/webapp/src/components/SwapCard/SwapCard.module.scss
+++ b/webapp/src/components/SwapCard/SwapCard.module.scss
@@ -62,6 +62,16 @@
 .colorMax {
   color: #FF00AF;
 }
+
+.labelDirection {
+  color: #000000;
+  font-weight: bold;
+}
+
+.labelBalance {
+  color: #000000;
+  font-weight: bold;
+}
 // .dropdownSwap {
 //   .dropdown {
 //    button {
