--- a/webapp/src/components/SwapCard/SwapCard.module.scss
+++ b/webapp/src/components/SwapCard/SwapCard.module.scss
@@ -7,6 +7,7 @@
 
 .swapCard {
   margin-bottom: 24px;
+  height: calc(100% - 24px);
   cursor: pointer;
 }
 
@@ -20,6 +21,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
+}
+
+.cardFooter {
+  height: 70px;
 }
 
 .label {
@@ -60,7 +65,7 @@
 }
 
 .colorMax {
-  color: #FF00AF;
+  color: #ff00af;
 }
 
 .labelDirection {
@@ -72,11 +77,8 @@
   color: #000000;
   font-weight: bold;
 }
-// .dropdownSwap {
-//   .dropdown {
-//    button {
-//     border: none !important;
-//     border-color: #fff !important;
-//     }
-//   }
-// }
+
+.dropDownCol {
+  position: initial;
+  padding: 0;
+}
