--- a/webapp/src/containers/Sidebar/Sidebar.module.scss
+++ b/webapp/src/containers/Sidebar/Sidebar.module.scss
@@ -14,6 +14,11 @@
   z-index: 2;
 }
 
+.iconPointer {
+  cursor: pointer;
+  color: #cccdcd;
+}
+
 .balance {
   position: relative;
   height: 112px;
