--- a/webapp/src/containers/PopOver/EncryptWalletModel/encryptWalletModel.module.scss
+++ b/webapp/src/containers/PopOver/EncryptWalletModel/encryptWalletModel.module.scss
@@ -6,12 +6,12 @@
 @import '../../../scss/bootstrap/variables';
 
 .modalContent {
-  background-color: #F4F3F6;
+  background-color: #f4f3f6;
   border: none;
 }
 
 .modalBackdrop {
-  background-color: #F4F3F6;
+  background-color: #f4f3f6;
   opacity: 1 !important;
 }
 
