--- a/webapp/src/containers/WalletPage/WalletPage.module.scss
+++ b/webapp/src/containers/WalletPage/WalletPage.module.scss
@@ -13,3 +13,35 @@
     color: $body-color;
   }
 }
+
+.searchBar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 24px 32px;
+
+  .formGroup {
+    position: relative;
+    top: 24px;
+  }
+
+  input {
+    padding-left: 48px;
+  }
+}
+
+.searchIndicator {
+  position: absolute;
+  z-index: 3;
+  margin: 12px;
+  color: $gray-400;
+  width: 24px;
+  height: 24px;
+  right: 5px;
+}
+
+.error-dailog {
+  color: $dfi-red !important;
+}
