--- a/webapp/src/components/SwapCard/SwapCard.module.scss
+++ b/webapp/src/components/SwapCard/SwapCard.module.scss
@@ -23,10 +23,6 @@
   align-items: flex-end;
 }
 
-.cardFooter {
-  height: 70px;
-}
-
 .label {
   font-weight: $font-weight-medium;
   letter-spacing: 0.15px;
@@ -66,6 +62,7 @@
 
 .colorMax {
   color: #ff00af;
+  text-align: right;
 }
 
 .labelDirection {
