Add scrollable in swap dropdown

--- a/webapp/src/components/swapDropdown/SwapDropdown.module.scss
+++ b/webapp/src/components/swapDropdown/SwapDropdown.module.scss
@@ -35,3 +35,8 @@
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 10px 10px 0 0;
 }
+
+.scrollableContainer {
+  height: 180px;
+  overflow-y: auto;
+}
