--- a/webapp/src/containers/SwapPage/components/RemoveLiquidity/removeLiquidity.module.scss
+++ b/webapp/src/containers/SwapPage/components/RemoveLiquidity/removeLiquidity.module.scss
@@ -28,3 +28,16 @@
   line-height: 24px;
   text-align: left;
 }
+
+.divisibilityDropdown {
+  width: 100%;
+  text-align: left;
+  &:after {
+    float: right;
+    margin-top: 10px;
+  }
+}
+
+.collateralDropdown {
+  box-shadow: 0 0 0 0.0625rem #dc3545 !important;
+}
