Added CSS changes

--- a/webapp/src/components/PairIcon/PairIcon.module.scss
+++ b/webapp/src/components/PairIcon/PairIcon.module.scss
@@ -9,7 +9,7 @@
   text-align: left;
 }
 
-.imgDesign img:nth-child(1) {
+.imgDesign div:nth-child(1) {
   font-weight: 500 !important;
   transform: translate(10px, 0px);
 }
