--- a/webapp/src/components/SwapSearchBar/SwapSearchBar.module.scss
+++ b/webapp/src/components/SwapSearchBar/SwapSearchBar.module.scss
@@ -5,20 +5,11 @@
 @import '../../scss/variables';
 @import '../../scss/bootstrap/variables';
 
-.formGroup {
-  position: relative;
-  margin-bottom: 0;
-}
-
-input {
-  padding-left: 48px;
+.searchInput {
+  border-right: 0;
 }
 
 .searchIndicator {
-  position: absolute;
-  right: 0;
-  margin: 12px;
-  color: $gray-400;
   width: 24px;
   height: 24px;
 }
