--- a/webapp/src/scss/bootstrap/_buttons.scss
+++ b/webapp/src/scss/bootstrap/_buttons.scss
@@ -64,6 +64,11 @@
   &:focus {
     text-decoration: none;
   }
+
+  &:disabled {
+    color: $gray-400;
+    background-color: transparent;
+  }
 }
 
 //
