--- a/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
+++ b/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
@@ -59,12 +59,27 @@
 }
 .mnemonicGuidelineWarning {
   color: #ff0000;
+  margin: 2rem 0;
 }
 
 .walletRecoveryInfo {
   background-color: rgba(255, 255, 255, 0);
+  color: rgba(0, 0, 0, 0.6);
   border: 1px solid rgba(0, 0, 0, 0.2);
   margin-top: 2rem;
   padding: 2rem;
   border-radius: 8px;
+}
+
+.verifyHeadLine6 {
+  font-weight: $font-weight-semibold;
+  font-size: 20px;
+}
+
+.verifySubtitle {
+  font-weight: $font-weight-medium;
+}
+
+.optionText {
+  text-transform: none !important;
 }
