--- a/webapp/src/containers/SwapPage/swap.module.scss
+++ b/webapp/src/containers/SwapPage/swap.module.scss
@@ -13,3 +13,26 @@
   color: rgba(0, 0, 0, 0.6);
   text-align: right;
 }
+
+.buttonLink {
+  text-transform: none !important;
+  color: #ff00af;
+  width: 100%;
+  text-align: left;
+  justify-content: center;
+  svg {
+    width: 48px;
+    height: 48px;
+  }
+  h4 {
+    color: rgb(0, 0, 0);
+  }
+  span {
+    color: $secondary;
+    font-size: 14px;
+  }
+}
+
+.width40 {
+  width: 40%;
+}
