--- a/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
+++ b/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
@@ -30,6 +30,42 @@
   line-height: 2.5rem;
 }
 
+.seeds {
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: $card-bg;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+.seedItem {
+  display: flex;
+}
+
+.seedNumber {
+  text-align: right;
+  padding-right: 16px;
+  width: 32px;
+  flex-shrink: 0;
+  white-space: nowrap;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: $secondary;
+}
+
+.seedWord {
+  border-bottom: $border-width solid $border-color;
+  flex-grow: 1;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 .number {
   font-weight: $font-weight-medium;
   color: $secondary;
