fix add liquidity dropdowns and menus

--- a/webapp/src/components/swapDropdown/SwapDropdown.module.scss
+++ b/webapp/src/components/swapDropdown/SwapDropdown.module.scss
@@ -27,6 +27,7 @@
 
   &:focus {
     border: 0;
+    box-shadow: none !important;
   }
 }
 
@@ -38,6 +39,34 @@
 .scrollableContainer {
   padding-top: 8px;
   padding-bottom: 8px;
-  height: 180px;
+  height: 240px;
   overflow-y: auto;
+}
+
+.dropDownItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.dropDownItemLeft {
+  display: flex;
+  align-items: center;
+}
+
+.dropDownIcon {
+  display: block;
+  margin-right: 8px;
+}
+
+.dropDownItemRight {
+  text-align: right;
+}
+
+:not(:active) {
+  > .dropDownItemRight {
+    color: $secondary;
+  }
 }
