--- a/webapp/src/containers/LiquidityPage/components/AvailablePoolPairsList/AvailablePoolPairList.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AvailablePoolPairsList/AvailablePoolPairList.module.scss
@@ -29,6 +29,15 @@
   }
 }
 
+.pairIconCol {
+  width: 56px;
+  padding-right: 0 !important;
+}
+
+.actionsCol {
+  text-align: right;
+}
+
 .status {
   width: 24px;
   height: 24px;
