--- a/webapp/src/components/PairIcon/PairIcon.module.scss
+++ b/webapp/src/components/PairIcon/PairIcon.module.scss
@@ -5,11 +5,21 @@
 @import '../../scss/variables';
 @import '../../scss/bootstrap/variables';
 
-.imgDesign {
-  text-align: left;
+.pairIcons {
+  position: relative;
+  width: 40px;
+  height: 24px;
+
+  > * {
+    position: absolute;
+  }
+
+  > :nth-child(1) {
+    left: 16px;
+  }
+
+  img {
+    display: block;
+  }
 }
 
-.imgDesign div:nth-child(1) {
-  font-weight: 500 !important;
-  transform: translate(10px, 0px);
-}
