--- a/webapp/src/scss/bootstrap/_variables.scss
+++ b/webapp/src/scss/bootstrap/_variables.scss
@@ -620,9 +620,9 @@ $custom-select-height-lg: $input-height-lg;
 $custom-range-track-width: 100%;
 $custom-range-track-height: 0.5rem;
 $custom-range-track-cursor: pointer;
-$custom-range-track-bg: $gray-300;
+$custom-range-track-bg: $gray-200;
 $custom-range-track-border-radius: 1rem;
-$custom-range-track-box-shadow: inset 0 0.25rem 0.25rem rgba($black, 0.1);
+$custom-range-track-box-shadow: inset 0 1px 1px rgba($black, 0.1);
 
 $custom-range-thumb-width: 1rem;
 $custom-range-thumb-height: $custom-range-thumb-width;
@@ -630,10 +630,10 @@ $custom-range-thumb-bg: $component-active-bg;
 $custom-range-thumb-border: 0;
 $custom-range-thumb-border-radius: 1rem;
 $custom-range-thumb-box-shadow: 0 0.1rem 0.25rem rgba($black, 0.1);
-$custom-range-thumb-focus-box-shadow: 0 0 0 1px $dfi-scent,
+$custom-range-thumb-focus-box-shadow: 0 0 0 1px $component-active-bg,
   $input-focus-box-shadow;
 $custom-range-thumb-focus-box-shadow-width: $input-focus-width; // For focus box shadow issue in IE/Edge
-$custom-range-thumb-active-bg: lighten($component-active-bg, 35%);
+$custom-range-thumb-active-bg: lighten($component-active-bg, 15%);
 $custom-range-thumb-disabled-bg: $gray-500;
 
 $custom-file-height: $input-height;
