Add a skip verify message page

--- a/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
+++ b/webapp/src/containers/WalletPage/components/CreateWallet/CreateWallet.module.scss
@@ -57,8 +57,13 @@
 .error-dailog {
   color: $dfi-red !important;
 }
+
+.warning-dailog {
+  color: $dfi-orange !important;
+}
+
 .mnemonicGuidelineWarning {
-  color: #ff0000;
+  color: $dfi-red;
   margin: 2rem 0;
 }
 
