Add tooltip on liquidity table column header APY for more information to user (#47)
Co-authored-by: Harsh Rathi <fullstackninja864@gmail.com>

--- a/webapp/src/containers/LiquidityPage/components/AvailablePoolPairsList/AvailablePoolPairList.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AvailablePoolPairsList/AvailablePoolPairList.module.scss
@@ -43,3 +43,10 @@
   height: 24px;
   color: $secondary;
 }
+.info-text {
+  svg {
+    width: 24px !important;
+    height: 16px !important;
+    vertical-align: baseline;
+  }
+}
