Made multiple loader inline

--- a/webapp/src/containers/LiquidityPage/components/RemoveLiquidity/removeLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/RemoveLiquidity/removeLiquidity.module.scss
@@ -97,4 +97,13 @@
 
 .successColor {
   color: #28a745;
+  position: absolute;
+  left: -30px;
+  height: 24px;
+  width: 24px;
+}
+
+.loaderInline {
+  position: absolute;
+  left: -30px;
 }
