--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -31,6 +31,15 @@
 
 .successColor {
   color: #28a745;
+  position: absolute;
+  left: -30px;
+  height: 24px;
+  width: 24px;
+}
+
+.loaderInline {
+  position: absolute;
+  left: -30px;
 }
 
 .keyValueLiKey {
